# dhscanner.kbgen

./: .gitmodules  Dockerfile  Dockerfile.dev  Dockerfile.rel  Dockerfile.rel.aarch64  Dockerfile.rel.x64  README.md  dhscanner.cabal
.github/workflows/: build.yml
src/: Factify.hs  KbGen.hs  Main.hs  PrologFileGen.hs
