cabal-version: 3.0
name: dhscanner
version: 0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license: MIT

-- The file containing the license text.
license-file: LICENSE

-- The package author(s).
author: Oren

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: Oren

-- A copyright notice.
-- copyright:
build-type: Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files: CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    
    ghc-options: -Wall

executable kbgen

    import: warnings

    main-is: Main.hs

    other-modules:
        KbGen,
        PrologFileGen

    build-depends:
        base,
        containers,
        dhscanner-ast >= 0.1.0.3,
        dhscanner-bitcode >= 0.1.0.2,
        aeson,
        array,
        yesod,
        text,
        mtl

    hs-source-dirs:
        src

    ghc-options: -Wall -threaded -Werror=missing-fields

    default-language: Haskell2010
