cabal-version: 3.0
name: dhscanner
version: 1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license: MIT

-- The file containing the license text.
license-file: LICENSE

-- The package author(s).
author: Oren

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: Oren

-- A copyright notice.
-- copyright:
build-type: Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files: CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common ghc_options
    
    ghc-options: -Wall

executable kbgen

    import: ghc_options

    main-is: Main.hs

    other-modules:
        Factify

    build-depends:
        base,
        containers,
        filepath,
        regex-tdfa,
        dhscanner-ast >= 1.1.2,
        dhscanner-bitcode >= 1.0.10,
        dhscanner-kbgen >= 1.0.7,
        split,
        aeson,
        array,
        yesod,
        text,
        mtl

    hs-source-dirs:
        src

    ghc-options: -Wall -threaded -Werror=missing-fields

    default-language: Haskell2010
